# AI-Native-Book-1

./: .gitignore  Dockerfile  README.md
.specify/memory/: claude-agent-context.md  constitution.md
backend/: Procfile  Requirement.txt  agent.py  api.py  app.py  cache.py  config.py  deployment_config.py  main.py  models.py  pyproject.toml  requirements.txt  retrieval.py  run_server.py  start_server.py  test_agent.py  test_e2e.py  test_integration.py  test_qdrant_api.py  test_qdrant_structure.py  utils.py
backend/backend/: .gitignore  README.md
backend/src/rag_agent/: README.md  __init__.py  agent.py  config.py  main.py  models.py  retrieval_tool.py  tools.py
backend/src/rag_pipeline/: __init__.py  config.py  crawler.py  embedder.py  retrieve.py  text_processor.py  vector_store.py
backend/tests/integration/: test_retrieve.py
backend/tests/unit/: test_retrieve.py
physical-ai-book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
physical-ai-book/docs/: intro.md
specs/001-rag-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-rag-agent-openai-sdk/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/1-humanoid-robotics-modules/: plan.md  research.md
specs/1-rag-chatbot-integration/: plan.md  spec.md  tasks.md
specs/2-digital-twin-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-ai-robot-brain-module/: plan.md  quickstart.md  (+3 more)
(+70 files in other folders)
